# rand_derive2

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: lib.rs
src/: gen.rs  gen_enum.rs  lib.rs  parser.rs
