[package]
name = "rand_derive2"
version = "0.1.18"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Generate customizable random types with the rand crate"
readme = "README.md"
keywords = ["rand", "random", "generate", "macro", "derive"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jasperav/rand_derive2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc_macro2_helper = "0.2"